--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   </head>
   <body>
     <header>
-      <h1>Ten Steps to Mastering the Fetch API</h1>
+      <h1>Eleven Steps to Mastering the Fetch API</h1>
     </header>
     <main>
       <!-- content from fetch loads in list here -->
@@ -31,13 +31,24 @@
         </li> -->
       </ul>
       <p>
-        <img id="pic" src="./1031-536x354.jpg" alt="loaded by fetch" width="300" height="200" />
+        <img
+          id="pic"
+          src="./1031-536x354.jpg"
+          alt="loaded by fetch"
+          width="300"
+          height="200"
+        />
         <button id="abort">ABORT</button>
       </p>
       <form name="myform" id="myform" action="https://www.google.ca/">
         <p>
           <label for="jsonfile">JSON:</label>
-          <input type="file" id="jsonfile" name="jsonfile" accept="application/json" />
+          <input
+            type="file"
+            id="jsonfile"
+            name="jsonfile"
+            accept="application/json"
+          />
         </p>
         <p>
           <label for="imgfile">Image:</label>
